---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/basic_pipe.arc

---
use arc_script::arcorn;
use arc_script::arcorn::state::{ArcMapOps, ArcRefOps, ArcSetOps, ArcVecOps};
use arcon::prelude::*;
pub fn x_0(x_1: i32) -> i32 {
    let y_1_0 = 1i32;
    let y_1_1 = x_1 + y_1_0;
    y_1_1
}
pub fn x_2(x_3: i32) -> i32 {
    let y_1_0 = 1i32;
    let y_1_1 = x_3 - y_1_0;
    y_1_1
}
pub fn test1() -> i32 {
    let y_1_0 = 3i32;
    let y_1_1 = x_0(y_1_0);
    let y_1_2 = x_2(y_1_1);
    y_1_2
}


